# src/Controllers/order.ts
@@ -6,7 +6,7 @@ const OrderService = require("../Services/OrderService");
 @Tags("Order")
 export default class OrderController {
   /**
-   * Get all orders for a user.
+   * Get all orders for given user.
    * @param email The user email.
    * @returns The user orders.
    */
@@ -14,6 +14,22 @@ export default class OrderController {
   public async getOrders(email: string): Promise<IOrder[]> {
     try {
       const orders = await OrderService.getOrdersByUser(email);
+      return orders;
+    } catch (error) {
+      console.log(error);
+      return [];
+    }
+  }
+
+  /**
+   * Get all orders for given Supplier.
+   * @param cuit The supplier CUIT.
+   * @returns The supplier order.
+   */
+  @Get("/supplier/:cuit")
+  public async getOrdersSupplierCuit(cuit: string): Promise<IOrder[]> {
+    try {
+      const orders = await OrderService.getOrdersBySupplier(cuit);
       return orders;
     } catch (error) {
       console.log(error);
